spacing issues. test on heroku

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,7 +4,7 @@
   margin-bottom: 5px;
   font-family: courier;
   font-size: 100px;
-  padding-top: 5px;
+  margin-top: -25px;
 }
 
 body {
